crates/vescpkg-rs/tests/ui/ratio_semantics_not_interchangeable.stderr
error[E0308]: mismatched types
 --> tests/ui/ratio_semantics_not_interchangeable.rs:8:13
  |
8 |     set_pwm(duty);
  |     ------- ^^^^ expected `Pwm`, found `DutyCycle`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> tests/ui/ratio_semantics_not_interchangeable.rs:3:4
  |
3 | fn set_pwm(_: Pwm) {}
  |    ^^^^^^^ ------
